--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "cloudteamisgreat"
 authors = [
     {name = "WeiYu", email = "wychen@narlabs.org.tw"},
 ]
-version = "0.0.1c"
+version = "0.0.1"
 description = "cloudteamisgreat"
 readme = "README.md"
 requires-python = ">=3.6"
@@ -18,13 +18,9 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
-    "ckanapi",
     "requests",
     "configparser",
-    "click",
-    "PyYAML",
-    "terminaltables",
 ]
 
 [project.scripts]
-cloudteamisgreat = "cloudteamisgreat.main:cli"
+cloudteamisgreat = "cloudteamisgreat.main:start"
